--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <title>주내힘교회 성경읽기</title>
-  <script type="module" crossorigin src="index-7dc1f56b.js?ver=0.1"></script>
-  <link rel="stylesheet" href="index-ce7cf7e7.cs?ver=0.1">
+  <script type="module" crossorigin src="index-7dc1f56b.js?ver=0.10"></script>
+  <link rel="stylesheet" href="index-ce7cf7e7.css?ver=0.10">
   <meta property="og:title" content="주내힘교회 성경읽기">
   <meta property="og:image" content="yessir.jpg">
   <meta property="og:description" content="하반기 성경읽기">
